kubernetes/01-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libreria-mysql
  namespace: libreria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libreria-mysql
  template:
    metadata:
      labels:
        app: libreria-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 20
            periodSeconds: 10
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: libreria-mysql
  namespace: libreria
spec:
  selector:
    app: libreria-mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
