kubernetes/01-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libreria-postgres
  namespace: libreria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libreria-postgres
  template:
    metadata:
      labels:
        app: libreria-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $(POSTGRES_USER) -d $(POSTGRES_DB)
            initialDelaySeconds: 20
            periodSeconds: 10
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: libreria-postgres
  namespace: libreria
spec:
  selector:
    app: libreria-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
